k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata: { name: dev }
---
apiVersion: v1
kind: Namespace
metadata: { name: prod }
---
apiVersion: v1
kind: Namespace
metadata: { name: db }
---
apiVersion: v1
kind: Namespace
metadata: { name: kafka }
---
apiVersion: v1
kind: Namespace
metadata: { name: monitoring }
---
apiVersion: v1
kind: Namespace
metadata: { name: vault }
