k8s/backend-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-external
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30003
